<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutGroup"
    tools:context=".GroupFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/controlLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutUserId"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <EditText
                android:id="@+id/txtUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/prompt_group" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnFetchGroupList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_fetch"
            app:layout_constraintTop_toBottomOf="@+id/layoutUserId"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnFetchGroupInfo" />

        <Button
            android:id="@+id/btnFetchGroupInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_fetch_info"
            app:layout_constraintTop_toBottomOf="@+id/layoutUserId"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/btnFetchGroupList"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_create"
            app:layout_constraintTop_toBottomOf="@+id/btnFetchGroupList"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnDissolve" />

        <Button
            android:id="@+id/btnDissolve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_dissolve"
            app:layout_constraintTop_toBottomOf="@+id/btnFetchGroupList"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/btnCreate"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnLeave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_leave"
            app:layout_constraintTop_toBottomOf="@+id/btnCreate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnAddMember" />

        <Button
            android:id="@+id/btnAddMember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_add_member"
            app:layout_constraintTop_toBottomOf="@+id/btnCreate"
            app:layout_constraintLeft_toRightOf="@+id/btnLeave"
            app:layout_constraintRight_toRightOf="parent"
            />

        <Button
            android:id="@+id/btnKickMember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_kick_member"
            app:layout_constraintTop_toBottomOf="@+id/btnAddMember"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnSendMessage" />

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_send_message"
            app:layout_constraintTop_toBottomOf="@+id/btnAddMember"
            app:layout_constraintLeft_toRightOf="@+id/btnKickMember"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnModifyDisplayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_modify_displayname"
            app:layout_constraintTop_toBottomOf="@+id/btnKickMember"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnModifyGroupName" />

        <Button
            android:id="@+id/btnModifyGroupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_modify_groupname"
            app:layout_constraintTop_toBottomOf="@+id/btnKickMember"
            app:layout_constraintLeft_toRightOf="@+id/btnModifyDisplayName"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/controlLayout"
        android:text="@string/prompt_group_item"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listGroups"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInfo" />

</android.support.constraint.ConstraintLayout>
