<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment"
    android:id="@+id/layoutCall">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/editTextUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/prompt_userid"
            android:inputType="textCapCharacters"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

       <Button
        android:id="@+id/queryUserStatus"
        style="@style/JCButton"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/account_query_user_status"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@id/textInputLayout"
        app:layout_constraintRight_toRightOf="@id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/account_query_tip"
        app:layout_constraintLeft_toLeftOf="@id/queryUserStatus"
        app:layout_constraintTop_toBottomOf="@id/queryUserStatus" />

</android.support.constraint.ConstraintLayout>